--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -1,3 +1,4 @@
+@import "functions";
 // SASS color variables derived from global CSS variables for easy references
 
 // REFACTOR: use mixin? to generate global variables for each color
