--- a/scss/dynamic-style.scss
+++ b/scss/dynamic-style.scss
@@ -6,6 +6,7 @@
 @import "../components/container/_index";
 @import "../components/form/_index";
 @import "../components/content/_index";
+@import "../components/navigation/_index";
 @import "styles/_index";
 @import "init/_index";
 @import "../backgrounds/_index";
