--- a/scss/init/_neu.scss
+++ b/scss/init/_neu.scss
@@ -377,6 +377,10 @@
     box-shadow: $inset-bs;
     padding-left: 0.4rem;
     padding-right: 0.3rem;
+
+    .legal {
+      color: $csc;
+    }
   }
 
   .side-nav {
