--- a/components/navigation/_sidebar.scss
+++ b/components/navigation/_sidebar.scss
@@ -1,9 +1,9 @@
 .sidebar {
   background-color: $cscm-25;
   flex: 0 0 18%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: space-between;
   padding-top: 2rem;
 
   .legal {
@@ -22,7 +22,10 @@
     width: 1.5rem;
     height: 1.5rem;
     fill: currentColor;
-    margin-right: 1rem;
+  }
+
+  &__label {
+    margin-left: 1rem;
   }
 
   &__link:link,
