--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -71,8 +71,8 @@ body {
 }
 
 /* Utility classes to quickly apply common rule by adding class names,
-        if a rule contains many declarations, extract to mixin also */
-/* Spacing utils from Bootstrap */
+if a rule contains many declarations, extract to mixin also */
+/* Bootstrap spacing utils */
 .my-4 {
   margin-top: 1.5rem !important;
   margin-bottom: 1.5rem !important;
@@ -90,7 +90,7 @@ body {
   margin: 0 !important;
 }
 
-/* Flex utils from Bootstrap */
+/* Bootstrap flexbox utils */
 .flex-row {
   -ms-flex-direction: row !important;
   -webkit-box-orient: horizontal !important;
@@ -108,6 +108,42 @@ body {
   display: -webkit-box !important;
   display: -ms-flexbox !important;
   display: flex !important;
+}
+
+/* Custom flexbox utils */
+.flex-basis-content {
+  -ms-flex-preferred-size: content !important;
+      flex-basis: content !important;
+}
+
+.flex-basis-0pc {
+  -ms-flex-preferred-size: 0% !important;
+      flex-basis: 0% !important;
+}
+
+.flex-basis-10pc {
+  -ms-flex-preferred-size: 10% !important;
+      flex-basis: 10% !important;
+}
+
+.flex-basis-20pc {
+  -ms-flex-preferred-size: 20% !important;
+      flex-basis: 20% !important;
+}
+
+.flex-basis-30pc {
+  -ms-flex-preferred-size: 30% !important;
+      flex-basis: 30% !important;
+}
+
+.flex-basis-40pc {
+  -ms-flex-preferred-size: 40% !important;
+      flex-basis: 40% !important;
+}
+
+.flex-basis-50pc {
+  -ms-flex-preferred-size: 50% !important;
+      flex-basis: 50% !important;
 }
 
 .clearfix::after {
@@ -1143,16 +1179,6 @@ img {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 18%;
           flex: 0 0 18%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   padding-top: 2rem;
 }
 
@@ -1172,7 +1198,10 @@ img {
   width: 1.5rem;
   height: 1.5rem;
   fill: currentColor;
-  margin-right: 1rem;
+}
+
+.side-nav__label {
+  margin-left: 1rem;
 }
 
 .side-nav__link:link, .side-nav__link:visited {
