--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -1,7 +1,7 @@
 /* Utility classes to quickly apply common rule by adding class names,
-        if a rule contains many declarations, extract to mixin also */
+if a rule contains many declarations, extract to mixin also */
 
-/* Spacing utils from Bootstrap */
+/* Bootstrap spacing utils */
 .my-4 {
   margin-top: 1.5rem !important;
   margin-bottom: 1.5rem !important;
@@ -16,7 +16,7 @@
   margin: 0 !important ;
 }
 
-/* Flex utils from Bootstrap */
+/* Bootstrap flexbox utils */
 .flex-row {
   -ms-flex-direction: row !important;
   flex-direction: row !important;
@@ -25,9 +25,32 @@
   -ms-flex-pack: center !important;
   justify-content: center !important;
 }
-
 .d-flex {
   display: flex !important;
+}
+
+/* Custom flexbox utils */
+// TODO: add fill, max...
+.flex-basis-content {
+  flex-basis: content !important;
+}
+.flex-basis-0pc {
+  flex-basis: 0% !important;
+}
+.flex-basis-10pc {
+  flex-basis: 10% !important;
+}
+.flex-basis-20pc {
+  flex-basis: 20% !important;
+}
+.flex-basis-30pc {
+  flex-basis: 30% !important;
+}
+.flex-basis-40pc {
+  flex-basis: 40% !important;
+}
+.flex-basis-50pc {
+  flex-basis: 50% !important;
 }
 
 // to break new line when using float
