--- a/scss/init/_common.scss
+++ b/scss/init/_common.scss
@@ -28,7 +28,7 @@ body,
 
 .highlight-color,
 .overlay-menu a.active,
-.timeline-year,
+// .timeline-year,
 .portfolio .radio-button-group li a,
 .contact .form-item .form-control,
 .highlight-portfolio-item.fa-star,
